[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/AI/Actor.gd" type="Script" id=1]
[ext_resource path="res://Collisions/PlayerDetect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Collisions/PlayerLeash.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/AI/AI.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Textures/proto_enemy.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 196.714

[sub_resource type="CircleShape2D" id=2]
radius = 2000.0

[node name="Actor" type="KinematicBody2D" groups=[
"mini_map",
]]
collision_layer = 13
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="PilotedShip" type="Node2D" parent="."]

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="TargetDetect" parent="AI" instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AI/TargetDetect" index="0"]
shape = SubResource( 1 )

[node name="TargetLeash" parent="AI" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="AI/TargetLeash" index="0"]
shape = SubResource( 2 )

[node name="EngageTimer" type="Timer" parent="AI"]

[connection signal="body_entered" from="AI/TargetDetect" to="AI" method="_on_TargetDetect_body_entered"]
[connection signal="body_exited" from="AI/TargetLeash" to="AI" method="_on_TargetLeash_body_exited"]

[editable path="AI/TargetDetect"]
[editable path="AI/TargetLeash"]
